--- a/Y2024/Cargo.toml
+++ b/Y2024/Cargo.toml
@@ -8,5 +8,6 @@ arboard = "3.4.1"
 color-eyre = "0.6.3"
 futures = "0.3.31"
 ratatui = "0.29.0"
+regex = "1.11.1"
 tokio = { version = "1.41.1", features = ["full"] }
 tokio-util = "0.7.12"
